--- a/app/src/main/res/layout/activity_detail_log_book.xml
+++ b/app/src/main/res/layout/activity_detail_log_book.xml
@@ -6,4 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".DetailLogBookActivity">
 
+    <TextView
+        android:id="@+id/tvKegiatanList"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
